frontend/frontend-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nodejs
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "bhojeshwarsahu/frontend:latest"
          ports:
          - containerPort: 5000
